--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -2,17 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+} */
+
+:root {
+  --foreground-rgb: 245, 245, 245;
+  --background-start-rgb: 40, 40, 40;
+  --background-end-rgb: 10, 10, 10;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
+  /* :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+  } */
+  :root {
+    --foreground-rgb: 245, 245, 245;
+    --background-start-rgb: 40, 40, 40;
+    --background-end-rgb: 10, 10, 10;
   }
 }
 
